Fix layout for more minimalistic with contrast

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -8,18 +8,23 @@
 /* import chota css */
 @import url(chota.min.css);
 
+/* import Ubuntu font */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 /* Overwrite css here */
 
 /**
 * Topbar
 */
 .topbar {
-    padding: 10px; /* Padding for the top bar */
+    padding: 5px 10px; /* Padding for the top bar */
     position: fixed; /* Fixed position at the top */
     top: 0; /* Stick to the top */
     width: 100%; /* Full width */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Shadow for the top bar */
+    box-shadow: none;
     z-index: 9999;
+    border-bottom: 1px black solid;
+    background-color: #fff;
 }
 
 .topbar svg {
@@ -37,7 +42,7 @@
     position: fixed; /* Fixed position */
     bottom: 20px; /* Distance from bottom */
     right: 20px; /* Distance from right */
-    background-color: #333; /* Background color */
+    background-color: #000; /* Background color */
     color: #fff; /* Text color */
     width: 40px; /* Button width */
     height: 40px; /* Button height */
@@ -88,9 +93,20 @@
     margin-bottom: .5rem;
 }
 
-.angle-type-list {
-    list-style: disclosure-closed;
-    padding-left: 1.5rem;
+.bg-white {
+    background-color: #fff;
+}
+
+.bg-black {
+    background-color: #000;
+}
+
+.text-black {
+    color: #000;
+}
+
+.flex-nowrap {
+    flex-wrap: nowrap;
 }
 
 /**
@@ -146,7 +162,8 @@
 
 /* custom styles */
 body {
-    background: #f2f2f2;
+    background: #fff;
+    font-family: "Ubuntu", sans-serif;
 }
 
 label {
@@ -163,4 +180,17 @@ input.datepicker {
             box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.1);
     width: 155px;
     height: 30px;
+}
+
+.card {
+    background: #f6f6f6;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 3px var(--color-grey);
+    box-shadow: 0 1px 2px var(--color-grey);
+    padding: 1rem;
+    border: 1px #000 solid;
+}
+
+.logo {
+    flex: 1 0 auto;
 }
